--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "alrayida-it-company",
+  "name": "Alrayida-it-company",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "framer-motion": "^12.6.5",
+    "keen-slider": "^6.8.6",
     "localforage": "^1.10.0",
     "lucide-react": "^0.487.0",
     "match-sorter": "^8.0.0",
@@ -21,7 +22,9 @@
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.0",
     "react-type-animation": "^3.2.0",
-    "sort-by": "^1.2.0"
+    "regl": "^2.1.1",
+    "sort-by": "^1.2.0",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
