--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "lucide-react": "^0.487.0",
     "match-sorter": "^8.0.0",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.5.0",
+    "react-swipeable": "^7.0.2",
     "react-type-animation": "^3.2.0",
     "regl": "^2.1.1",
     "sort-by": "^1.2.0",
+    "swiper": "^11.2.6",
     "three": "^0.175.0"
   },
   "devDependencies": {
